--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>keybridge.lib</groupId>
   <artifactId>rs-client</artifactId>
-  <version>1.0.0</version>
+  <version>1.1.0</version>
   <packaging>jar</packaging>
 
   <name>lib-rs-client</name>
@@ -13,6 +13,7 @@
 
     History
     v1.0.0 - created 2020-02-04
+    v1.1.0 - update abstract rest client to include baseUri, update constructors
 
   </description>
 
